--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,4 @@
 @import url("../home/contatate-nos.css");
 @import url("../home/contato.css");
 @import url("../home/depoimento.css");
+@import url("../home/faq.css");
