--- a/home/sobre.css
+++ b/home/sobre.css
@@ -141,7 +141,11 @@ h2::before{
 
 #saiba_mais{
   padding-top: 50px;
+
 }
 
-
-
+.link_topo{
+  padding-top: 50px;
+  display: flex;  
+  justify-content: center;
+}
