--- a/home/faq.css
+++ b/home/faq.css
@@ -21,12 +21,14 @@
   font-size: (14dpx + 0.5vw);
   color:#575757;
   padding-top: 20px;
+  opacity: 0;
 }
 
 .pergunta {
   font-family: 'Playfair Display';
   font-size:calc(15px + 0.5vw); 
   position: relative;
+
 
 }
 
@@ -42,6 +44,7 @@ background-repeat: no-repeat;
 padding-top: 5px;
 margin-left: 10px;
 bottom: 0;
+
 }
 
 .svg-abrir{
@@ -50,7 +53,10 @@ bottom: 0;
 
 
 .pergunta.ativo + .resposta {
-display: none;
+  opacity: 1;
+  transform: none;
+  transition: transform 0.8s, opacity 0.8s;
+
 
 
 }
