--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,5 @@
 @import url("../home/contato.css");
 @import url("../home/depoimento.css");
 @import url("../home/faq.css");
+@import url("../home/faq.css");
+@import url("../footer/footer.css");
