--- a/footer/footer.css
+++ b/footer/footer.css
@@ -4,9 +4,9 @@ footer{
     background-color: #494B3E;
     width:100%;
     text-align: center;
-    color: #858881;
-  
-  
+    color: white;
+    border: solid 2px black;
+    box-sizing: border-box;
    }
 
 
